[package]
name = "wikid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
git2 = "0.13.23"
open = "2.0.3"
chrono = "0.4.19"
num-traits = "0.2.14"